NEWS
====

* 2007/04/22 v.0.9.devel (New API pre-release)

    - New API
    - Performance improvemenets: read hex file now ~45% faster

* 2007/02/26 v.0.8.5 (BugFix Release)

    Performance improvements for writing big hex files
    when starting address is far from 0.
    Patch from Heiko Henkelmann.
       
* 2007/02/26 v.0.8.4 (License added)

    The code actually licensed under BSD, but there was 
    no LICENSE file in sources archive. Added license file
    and explicit declaration in the source code.

* 2006/09/05 v.0.8.3 (BugFix Release)

    Fix writing hex files with extended linear records
    (when address overlaps 64K boundary).
    Patch from Henrik Maier.
    
* 2006/04/11 v.0.8.2 (Major improvements release)

    - Introduced new class IntelHex16bit for manipulate
      data as 16-bit values
    - You can manipulate data using dictionary-like
      interface (i.e. syntax: ih[addr] = value)
    - Added new method .writefile(file) for writing
      data to hex file
    - Using unittest for testing functionality
    
* 2006/03 v.0.6

    Convertor engine hex2bin extracted to stand-alone function
    for using by external clients of intelhex
    
* 2005 v.0.5

    First public release